cabal-version: 3.0
name: blake3
version: 0.3.2
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Copyright (c) Renzo Carbonara 2020
category: Cryptography
build-type: Simple
synopsis: BLAKE3 hashing algorithm
description: Bindings to the official fast BLAKE3 implementations in assembly
             and C, with support for AVX-512, AVX2, SSE 2, SSE 4.1, and ARM NEON.
homepage: https://github.com/k0001/hs-blake3
bug-reports: https://github.com/k0001/hs-blake3/issues
tested-with: GHC == 9.2.5
extra-source-files:
  cbits/*.h
  cbits/README.md
  cbits/LICENSE

flag avx512
  description: Enable AVX-512 instructions (x86_64 only)
  default: True
  manual: True

flag avx2
  description: Enable AVX2 instructions (x86_64 only)
  default: True
  manual: True

flag sse41
  description: Enable SSE 4.1 instructions (x86_64 only)
  default: True
  manual: True

flag sse2
  description: Enable SSE 2 instructions (x86_64 only)
  default: True
  manual: True

flag neon
  description: Enable ARM NEON instructions (aarch64 only)
  default: True
  manual: True

common basic
  default-language: Haskell2010
  ghc-options: -Wall -Werror=incomplete-patterns
  build-depends:
    base == 4.*,
    memory

library
  import: basic
  hs-source-dirs: lib
  exposed-modules:
    BLAKE3
    BLAKE3.IO
  cc-options: -O3
  include-dirs: cbits/
  c-sources:
    cbits/blake3.c
    cbits/blake3_dispatch.c
    cbits/blake3_portable.c

  -- ARM NEON support (aarch64)
  if arch(aarch64)
    if flag(neon)
      c-sources: cbits/blake3_neon.c
    else
      cc-options: -DBLAKE3_USE_NEON=0
    -- Disable x86 intrinsics on ARM
    cc-options: -DBLAKE3_NO_AVX512 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_SSE2

  -- x86_64 support
  if arch(x86_64)
    -- AVX-512 support
    if flag(avx512)
      if os(linux) || os(darwin)
        asm-sources: cbits/blake3_avx512_x86-64_unix.S
      elif os(windows)
        asm-sources: cbits/blake3_avx512_x86-64_windows_gnu.S
      else
        c-sources: cbits/blake3_avx512.c
    else
      cc-options: -DBLAKE3_NO_AVX512

    -- AVX2 support
    if flag(avx2)
      if os(linux) || os(darwin)
        asm-sources: cbits/blake3_avx2_x86-64_unix.S
      elif os(windows)
        asm-sources: cbits/blake3_avx2_x86-64_windows_gnu.S
      else
        c-sources: cbits/blake3_avx2.c
    else
      cc-options: -DBLAKE3_NO_AVX2

    -- SSE 4.1 support
    if flag(sse41)
      if os(linux) || os(darwin)
        asm-sources: cbits/blake3_sse41_x86-64_unix.S
      elif os(windows)
        asm-sources: cbits/blake3_sse41_x86-64_windows_gnu.S
      else
        c-sources: cbits/blake3_sse41.c
    else
      cc-options: -DBLAKE3_NO_SSE41

    -- SSE 2 support
    if flag(sse2)
      if os(linux) || os(darwin)
        asm-sources: cbits/blake3_sse2_x86-64_unix.S
      elif os(windows)
        asm-sources: cbits/blake3_sse2_x86-64_windows_gnu.S
      else
        c-sources: cbits/blake3_sse2.c
    else
      cc-options: -DBLAKE3_NO_SSE2

  -- Fallback for other architectures (portable C only)
  if !arch(x86_64) && !arch(aarch64)
    cc-options: -DBLAKE3_NO_AVX512 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_SSE2 -DBLAKE3_USE_NEON=0


test-suite test
  import: basic
  ghc-options: -Wall -Werror=incomplete-patterns -O2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    blake3,
    memory,
    tasty,
    tasty-hunit,
